Add MainLayout and Styling For All Views, Configure App to Use Static FIles.
Adds MainLayout with styling, configure app to search for static files in wwwroot folder.

--- a/BDWeb/Views/Home/AboutMe.cshtml
+++ b/BDWeb/Views/Home/AboutMe.cshtml
@@ -1,15 +1,7 @@
 ﻿@{
-    Layout = null;
+    Layout = "_MainLayout";
 }
 
-<!DOCTYPE html>
+<h1 class="h1">Page where I introduce myself</h1>
+<input class="btn-light" type="button" value="click me"/>  
 
-<html>
-<head>
-    <meta name="viewport" content="width-device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <h1>Page where I introduce myself</h1>
-</body>
-</html>
