--- a/BDWeb/Views/Home/Index.cshtml
+++ b/BDWeb/Views/Home/Index.cshtml
@@ -1,16 +1,5 @@
 ﻿
 @{ 
-    Layout = null;
+    Layout = "_MainLayout";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width-device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <h1>This is the home page of bartidev app</h1>
-</body>
-</html>
