Add Style for Index Page and Client Side Library.
Writes css code for index page in MainLayoutStyle, adds jqurey and bootstrap library, adds navigation.

--- a/BDWeb/Views/Home/AboutMe.cshtml
+++ b/BDWeb/Views/Home/AboutMe.cshtml
@@ -2,6 +2,5 @@
     Layout = "_MainLayout";
 }
 
-<h1 class="h1">Page where I introduce myself</h1>
-<input class="btn-light" type="button" value="click me"/>  
+<h1 class="h1">This the place where you get to know me a little</h1>  
 
