--- a/BDWeb/Views/Home/Index.cshtml
+++ b/BDWeb/Views/Home/Index.cshtml
@@ -3,3 +3,21 @@
     Layout = "_MainLayout";
 }
 
+<section class="index-welcoming">
+    <div class="table-vertical-alignment">
+        <h1>HI! I AM A POWER ENGINEERING GRADUATE AND .NET DEVELOPER.</h1>
+        <h2>THIS WEBSITE IS A WAY TO STAY MOTIVATED TO CREATE MORE CONTENT AND TO SHARE MY PROJECTS AND INTERESTS, FEEL FREE TO EXPLORE.</h2>
+    </div>
+</section>
+
+<section class="index-menu wrapper">
+    <a href="/home/aboutMe">
+        <h3>About Me</h3>
+    </a>
+    <a href="/projects/getAllProjectsCategories">
+        <h3>Projects</h3>
+    </a>
+    <a href="home/contact">
+        <h3>Contact</h3>
+    </a>
+</section>
