--- a/BDWeb/Views/Shared/_MainLayout.cshtml
+++ b/BDWeb/Views/Shared/_MainLayout.cshtml
@@ -11,12 +11,12 @@
 <body>
 
     <header>
-        <a href="Index.html" class="header-brand">BartiDev</a>
+        <a href="/" class="header-brand">BartiDev</a>
         <nav>
             <ul>
-                <li><a href="Projects.html">Projects</a></li>
-                <li><a href="AboutMe.html">About Me</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="/projects/getAllProjectsCategories">Projects</a></li>
+                <li><a href="/home/aboutMe">About Me</a></li>
+                <li><a href="/home/contant">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,10 +27,10 @@
 
     <footer>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/projects/getAllProjectsCategories">Projects</a></li>
+            <li><a href="/home/aboutMe">About Me</a></li>
+            <li><a href="home/contact">Contact</a></li>
         </ul>
         <ul class="footer-projects">
             <li><a>Latest Projects</a></li>
@@ -39,10 +39,10 @@
         </ul>
         <div class="footer-socialMedia">
             <a href="https://github.com/BartiDev">
-                <img src="images/logos/github-icon.png" alt="github icon">
+                <img src="~/images/logos/github-icon.png" alt="github icon">
             </a>
             <a href="https://www.linkedin.com/in/bart%C5%82omiej-nowak-47a9531a3/">
-                <img src="images/logos/linkedin-icon.png" alt="linkedin icon">
+                <img src="~/images/logos/linkedin-icon.png" alt="linkedin icon">
             </a>
         </div>
     </footer>
