Add GetAllProjectsCategories View and Update Some Style.
Adds GetAllProjectsCategories view with styling, adds ancor tags and updates floats in style to flexbox.

--- a/BDWeb/Views/Home/AboutMe.cshtml
+++ b/BDWeb/Views/Home/AboutMe.cshtml
@@ -2,5 +2,19 @@
     Layout = "_MainLayout";
 }
 
-<h1 class="h1">This the place where you get to know me a little</h1>  
+<div class="about-me wrapper">
+    <h1>This is the place where you get to know me a little</h1>
+    <h2>College times</h2>
+    <p>I graduated Power Engineering from AGH University of Science and Technology.</p>
+    <p>Due to studying such a broad field of study I had a chance of being interested in many different subfields,
+        for example:<br> - Sustainable Buiding<br> - Automation<br>- Hydrogen Energy<br><br>
+        Finally I took second cycle study: Computer Modeling in Power Engineering which specialized me in 
+        thermal science, computer modeling and mathematical modeling, which I trully enjoyed.</p>
+    <p>My master thesis composes all of these fields and is dealing with thermal processess
+        occuring during jet impingment witch I model through turbulence models.</p>
+    <h2>What's now?</h2>
+    <p>During my final year I became fascinated with possibilities of coding along with data science and 
+        machine learning. I want to grow as a programmer and data scientist and hopefeully one day combine my
+        coding skills with knowledge I gain in college.</p>  
+</div>
 
